--- a/src/main/resources/com/ardublock/block/ardublock_fr.properties
+++ b/src/main/resources/com/ardublock/block/ardublock_fr.properties
@@ -676,6 +676,7 @@ bg.ls_ThermalModule.description=Module capteur de temp\u00e9rature
 bg.ls_TiltModule.description=Module capteur de choc
 bg.ls_TouchSensorModule.description=Module capteur sensitif
 bg.random_range.description=G\u00e9n\u00e9rer un nombre al\u00e9atoire entre min et (max - 1)
+bg.traffic_light.description=traffic_light_fr
 
 bg.panda_i1=Panda I1
 bg.panda_i2=Panda I2
